fix accordians spacing

--- a/src/components/lists/_list.scss
+++ b/src/components/lists/_list.scss
@@ -1,5 +1,5 @@
 .list {
-  margin: 0;
+  margin: 0 0 1rem;
   padding: 0 0 0 1.5rem;
 
   &__item {
